fix: remove tags list on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -158,3 +158,7 @@ input[type="text"] {
 .breadcrumb-separator::after {
   content: " ";
 }
+
+#side-contents-tags {
+  display: none;
+}
